fix overlapping links in footer on mobile

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1112,6 +1112,7 @@ section.case a:hover, section.case a:focus {
 
 .links {
   *zoom: 1;
+  float: left;
 }
 .links:after {
   content: "";
