--- a/stylesheets/partials/_footer.sass
+++ b/stylesheets/partials/_footer.sass
@@ -52,6 +52,7 @@
 	margin-right: 30px
 .links
 	@include pie-clearfix
+	float: left
 	@media screen and (min-width: 801px)
 		float: left
 		width: 40%
